# bevyAOCday6vis

./: .gitignore  Cargo.toml  default.nix  flake.nix  index.html  input2  input3  native.nix  shell.nix  wasm.nix
.cargo/: config.toml
src/: app.rs  asset.rs  buttons.rs  camera.rs  controls.rs  input.rs  lib.rs  main.rs  part1and2.rs  types.rs
src/examples/: input4.txt
