[package]
name = "day6vis"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.15.0" }
futures = "0.3"
rand = "0.8.5"
bevy_egui = "0.31"
wasm-bindgen = "0.2.99"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.web-sys]
version = "0.3.76"
features = ["Clipboard", "Window", "Navigator", "Permissions"]
